tests/ui/errors/unterminated_element.stderr
error: unknown attribute
 --> tests/ui/errors/unterminated_element.rs:6:9
  |
6 |         "hi"
  |         ^^^^

error: child elements not found
 --> tests/ui/errors/unterminated_element.rs:5:9
  |
5 | /         input type="text"
6 | |         "hi"
  | |____________^
  |
  = help: add a `;` at the end to terminate the element
